--- a/.gitmodules
+++ b/.gitmodules
@@ -5,8 +5,8 @@
     path = shell_env/shell/zsh/custom_plugins/zsh-completions
     url = https://github.com/zsh-users/zsh-completions.git
 [submodule "syscontrol"]
-	path = syscontrol
-	url = git@github.com:sethc23/syscontrol.git
+    path = syscontrol
+    url = https://github.com/sethc23/syscontrol.git
 [submodule "sysparse"]
     path = sysparse
     url = https://github.com/sethc23/sysparse.git
